# recommendation_system

./: .gitignore  pyproject.toml  pytest.ini
config/: settings.py  urls.py
movies/: admin.py  fibonacci.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_rename_genre_movie_genres.py  0003_movie_country_movie_extra_data_movie_release_year_and_more.py
movies/tests/: factories.py  test_movie_api.py  test_serializers.py  tests.py
