[project]
name = "recommendation-system"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jacob Quaye", email = "kofimave@gmail.com" }
]
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.12.12",
    "mypy>=1.17.1",
    "black>=25.1.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "factory-boy>=3.3.3",
]

